2005-04-07  Sebastien Delafond <sdelafond@gmx.net>

        * Added support for statfs.f_bavail, so that df can correctly report
	disk usage.
	
2004-11-21  Sebastien Delafond <sdelafond@gmx.net>	

	* Took over maintainership.
	* Added comment to xmp.py
	
2004-09-27  Miklos Szeredi <miklos@szeredi.hu>

	* Applied patch by Steven James.  The Python binding in the CVS
	version fell out of date and wouldn't compile. Fixed and added
	FuseGetContext call.
